# biketracker

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  Cargo.nix  Cargo.toml  Dockerfile.migrant  Dockerfile.server  README.org  crates-io.list  crates-io.nix  default.nix  deploy.sh  grafana-config.json  shell.nix
.git-crypt/keys/default/0/: 1B222A5DABE18B8CE52CBD7F5E75C184BBAF487A.gpg
ansible/: authorized_keys.j2  biektracker-agent.toml.j2  config.txt.j2  hosts.ini  lxdm-dashboard.conf.j2  lxdm.conf.j2  playbook.yml  sshd_config.j2  start-dashboard.j2
biketracker-agent/: Cargo.toml  Config.toml
biketracker-agent/src/: config.rs  cyclists.rs  event_loop.rs  gui.rs  lib.rs  main.rs  memo_future.rs
biketracker-agent/src/bike/: cancelable.rs  deskbike.rs  fake.rs  mod.rs
biketracker-agent/src/reporter/: mod.rs  server.rs  stdout.rs
biketracker-agent/src/widgets/: mod.rs  scroll_by_drag.rs
biketracker-server/: .gitignore  Cargo.toml  Config.toml  Migrant-env.toml  Migrant.toml
biketracker-server/migrations/20190212140758_setup/: down.sql  up.sql
biketracker-server/migrations/20190503132415_grant-viewer-permissions/: down.sql  up.sql
biketracker-server/migrations/20190506142746_track-session-start/: down.sql  up.sql
biketracker-server/src/: bike_session.rs  config.rs  db.rs  main.rs
biketracker-shared/: Cargo.toml
biketracker-shared/src/: lib.rs
charts/biketracker/: Chart.yaml  values.yaml
charts/biketracker/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  postgres.yaml  service.yaml
deploy/: git-crypt.key.enc  kubeconfig
deploy/registry-keys/: client.key
pkgbuilds/rpi-fbcp/: .gitignore  PKGBUILD  fbcp.service  xorg.conf
src/: deskbike.rs  event_loop.rs  lib.rs  main.rs
src/bike/: deskbike.rs  fake.rs
src/reporter/: mod.rs  prometheus.rs
src/source/: deskbike.rs  fake.rs  mod.rs
