[package]
name = "biketracker"
version = "0.1.0"
authors = ["Teo Klestrup Röijezon <teo@nullable.se>"]
edition = "2018"

[dependencies]
# blurz = "0.4.0"
# We need the error to be Sync for compatibility with Failure, see szeged/blurz#24
blurz = { git = "https://github.com/teozkr/blurz", branch = "sync-errors" }
dbus = "0.6.4"
failure = "0.1.5"
nom = "4.2.0"
void = "1.0.2"
tokio = "0.1.15"
futures = "0.1.25"

[dependencies.conrod]
version = "0.61.1"
features = ["glium", "winit"]
