[package]
name = "biketracker-agent"
version = "0.1.0"
authors = ["Teo Klestrup Röijezon <teo.roijezon@etimo.se>"]
edition = "2018"

[dependencies]
# blurz = "0.4.0"
# We need the error to be Sync for compatibility with Failure, see szeged/blurz#24
blurz = { git = "https://github.com/teozkr/blurz", branch = "biketracker" }
dbus = "0.6.4"
failure = "0.1.5"
nom = "4.2.0"
void = "1.0.2"
tokio = "0.1.15"
futures = "0.1.25"
reqwest = "0.9.9"
serde = "1.0.87"
serde_derive = "1.0.87"
config = "0.9.2"
conrod_core = "0.63.0"
conrod_glium = "0.63.0"
conrod_winit = "0.63.0"
glium = "0.23.0"
conrod_derive = "0.63.0"
