[package]
name = "biketracker-server"
version = "0.1.0"
authors = ["Teo Klestrup Röijezon <teo.roijezon@etimo.se>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
hyper = "0.12.24"
futures = "0.1.25"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
chrono = "0.4.6"
config = "0.9.2"
tokio-postgres-openssl = "0.1.0-rc.1"

[dependencies.openssl]
version = "0.10.20"
features = ["vendored"]

[dependencies.tokio-postgres]
version = "0.4.0-rc.2"
features = ["with-uuid-0_7", "with-chrono-0_4"]

[dependencies.uuid]
version = "0.7.2"
features = ["v4"]
